--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@neondatabase/serverless": "^0.9.1",
     "@prisma/adapter-neon": "^5.13.0",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.373.0",
